--- a/demo/package.json
+++ b/demo/package.json
@@ -1,11 +1,11 @@
 {
   "nativescript": {
     "id": "org.nativescript.demo",
-    "tns-ios": {
-      "version": "2.5.0-2016-11-3-2"
-    },
     "tns-android": {
-      "version": "2.5.0-next-2016-11-17-1406"
+      "version": "2.5.0"
+    },
+    "tns-ios": {
+      "version": "2.5.0"
     }
   },
   "dependencies": {
